Edit Issue Developments

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -24,6 +24,14 @@
     a.active {
       background-color: #D8D8F5;
     }
+
+    input.invalid {
+      border-color: red;
+    }
+
+    div.error {
+      color: red;
+    }
   </style>
 </head>
 
